--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     padding: 3px;
 }
 
-h1 {
+h1, h2, h3 {
     margin: 4px 0 6px 2px;
     color: #337ab7;
 }
@@ -28,6 +28,16 @@ button:disabled {
     opacity: .5;
 }
 
+.settings-icon {
+    cursor: pointer;
+    height: 16px;
+    width: 16px;
+}
+
+.settings-icon:hover {
+    opacity: 0.7;
+}
+
 .header {
     text-align: center;
 }
@@ -36,6 +46,7 @@ button:disabled {
     margin: 14px 5%;
     opacity: 0;
     text-align: center;
+    visibility: hidden;
     width: 90%;
 }
 
@@ -50,7 +61,7 @@ button:disabled {
 .progress-bar {
     border-radius: 2px;
     margin: 4px 5% 0;
-    border: 1px solid #888;
+    border: 1px solid #aaa;
     width: 90%;
 }
 
@@ -105,7 +116,7 @@ button:disabled {
 
 table.script-list {
     border-collapse: collapse;
-    margin-top: 8px;
+    margin: 8px 0 0;
     width: 100%;
 }
 
@@ -121,12 +132,90 @@ table.script-list td {
     padding: 6px;
 }
 
+table.script-list td:first-child {
+    width: 58px;
+}
+
 table.script-list td:last-child {
     width: 1px;
 }
 
+input[type=checkbox] {
+    vertical-align: middle;
+    position: relative;
+    bottom: 1px;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+    margin-right: 2px;
+}
+
+.switch input {
+    display:none;
+}
+
+.slider {
+    border-radius: 20px;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    border-radius: 50%;
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 2px;
+    bottom: 2px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked + .slider {
+    background-color: #2196F3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+    transform: translateX(20px);
+}
+
+.options-container {
+    display: none;
+    max-height: 79px;
+    overflow-y: hidden;
+    text-align: right;
+}
+
+.options {
+    visibility: hidden;
+}
+
+label.switch-text {
+    vertical-align: middle;
+    position: relative;
+    bottom: 7px;
+    margin-right: 2px;
+}
+
 #created-by {
     font-size: 9px;
-    margin-top: 8px;
+    margin-top: 12px;
     text-align: right;
 }
